5.0-beta2
 * Avoid reading of the same IndexInfo from disk many times for a large partition (CASSANDRA-19557)
 * Resolve the oldest hints just from descriptors and current writer if available (CASSANDRA-19600)
 * Optionally fail writes when SAI refuses to index a term value exceeding configured term max size (CASSANDRA-19493)
 * Vector search can restrict on clustering keys when filtering isn't required (CASSANDRA-19544)
 * Fix FBUtilities' parsing of gcp cos_containerd kernel versions (CASSANDRA-18594)
 * Clean up KeyRangeIterator classes (CASSANDRA-19428)
 * Warn clients about possible consistency violations for filtering queries against multiple mutable columns (CASSANDRA-19489)
 * Align buffer with commitlog segment size (CASSANDRA-19471)
 * Ensure SAI indexes empty byte buffers for types that allow them as a valid input (CASSANDRA-19461)
 * Deprecate Python 3.7 and earlier, but allow cqlsh to run with Python 3.6-3.11 (CASSANDRA-19467)
 * Set uuid_sstable_identifiers_enabled to true in cassandra-latest.yaml (CASSANDRA-19460)
 * Revert switching to approxTime in Dispatcher (CASSANDRA-19454)
 * Add an optimized default configuration to tests and make it available for new users (CASSANDRA-18753)
 * Fix remote JMX under Java17 (CASSANDRA-19453)
 * Avoid consistency violations for SAI intersections over unrepaired data at consistency levels requiring reconciliation (CASSANDRA-19018)
 * Fix NullPointerException in ANN+WHERE when adding rows in another partition (CASSANDRA-19404)
 * Record latencies for SAI post-filtering reads against local storage (CASSANDRA-18940)
 * Fix VectorMemoryIndex#update logic to compare vectors. Fix Index view (CASSANDRA-19168)
 * Deprecate native_transport_port_ssl (CASSANDRA-19392)
 * Update packaging shell includes (CASSANDRA-19283)
 * Fix data corruption in VectorCodec when using heap buffers (CASSANDRA-19167)
 * Avoid over-skipping of key iterators from static column indexes during mixed intersections (CASSANDRA-19278)